# wasi-sdk

./: .azure-pipelines.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CppExceptions.md  Dockerfile  Makefile  README.md  RELEASING.md  SetjmpLongjmp.md  azure-pipelines.yml  ci-build.sh  clang.cfg  cross_build_arm64.sh  deb_from_installation.sh  docker_build.sh  llvm_version.sh  llvm_version_major.sh  package.sh  sdk.Dockerfile  strip_symbols.sh  tar_from_installation.sh  version.py  version.sh  wasi-sdk-p1-thread.cmake  wasi-sdk-p1.cmake  wasi-sdk-p2.cmake  wasi-sdk-p3.cmake  wasi-sdk-pthread.cmake  wasi-sdk.cmake  wasi-sdk.control
.github/actions/checkout/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: main.yml
ci/: build.sh  docker-build.sh  download-workflow-artifacts.sh  draft-release.sh  get-workflows-for-tag.sh  is-workflow-valid.sh  merge-artifacts.sh
ci/docker/: Dockerfile  Dockerfile.arm64-linux  Dockerfile.common  Dockerfile.riscv64-linux  Dockerfile.x86_64-linux  README.md  install-ccache.sh
cmake/: wasi-sdk-dist.cmake  wasi-sdk-enable-ccache.cmake  wasi-sdk-sysroot.cmake  wasi-sdk-toolchain.cmake
cmake/Platform/: WASI.cmake
docker/: Dockerfile  Dockerfile.dockerignore  wasi-sdk-p2.cmake  wasi-sdk-pthread.cmake  wasi-sdk.cmake
docs/: riscv64-build.md
src/: llvm-pr-168449.patch  llvm-pr-185770.patch  llvm-pr-185775.patch  llvm-pr-186054.patch  llvm-pr-200855.patch  llvm-pr-206831.patch  llvm-prs-208263-208332-208597.patch  llvm-undo-part-of-194317.patch
tests/: .gitignore  CMakeLists.txt  empty-expected.wat  run.sh  testcase.sh
tests/cmake/: CMakeLists.txt  test_driver.sh
tests/compile-only/: CMakeLists.txt  addresses.c  printf-long-double.c
tests/general/: CMakeLists.txt  abort.c  abort.c.stderr.expected  abort.c.stderr.expected.filter  abort.c.wasm32-wasip2.stderr.expected  argc_argv_main.c  argc_argv_main.c.stdout.expected  argc_argv_main.cc  argc_argv_main.cc.stdout.expected  assert-fail.c  assert-fail.c.stderr.expected  assert-fail.c.stderr.expected.filter  assert-fail.c.wasm32-wasi-preview2.stderr.expected  assert-pass.c  builtin-floatdidf.c  builtin-floatditf.c  clocks.c  clocks.c.options  cpp_thread_local.cc  ctors_dtors.c  ctors_dtors.c.stdout.expected  ctors_dtors.cc  ctors_dtors.cc.stdout.expected  env-absent.c  env-absent.c.stdout.expected  env.c.stdout.expected  environ.c  environ.c.env  exceptions.cc  getentropy.c  iostream_main.cc  iostream_main.cc.stdout.expected  main_errno.c  main_errno.c.stdout.expected  mmap.c  mmap.c.options  mmap.c.stdout.expected  no_arg_main.c  no_arg_main.c.stdout.expected  no_arg_main.cc  (+22 more)
tests/general/mmap.c.dir/: .gitattributes  input.txt
tests/general/opendir.c.dir/: file-symlink  file.md
tests/general/opendir.c.dir/dir/: file.txt
